codestyling, MalformedResponseException